--- a/index.html
+++ b/index.html
@@ -235,30 +235,9 @@
           </p>
           <p class="feat-sec-1">Uno de ellos consta de una landing page que redirigirán al usuario a cuatro páginas individuales, de las cuales una poseerá carrito de compras. Todas poseerán medios de carga de contenido por parte del propietario del proyecto.</p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/03.jpg" class="img-responsive" alt=""></div>
-      </div>
-      <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-4">
-        <div class="col-md-6 tab">
-          <h5>Responsive Design</h5>
-          <div class="line"></div>
-          <div class="clearfix"></div>
-          <p class="feat-sec">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<br>
-          </p>
-          <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
-        </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/04.jpg" class="img-responsive" alt=""></div>
-      </div>
-      <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-5">
-        <div class="col-md-6 tab">
-          <h5>Creative Gallery</h5>
-          <div class="line"></div>
-          <div class="clearfix"></div>
-          <p class="feat-sec">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<br>
-          </p>
-          <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
-        </div>
         <div class="col-md-6 tab-img"><img src="images/Features/gusty.png" class="img-responsive" alt=""></div>
       </div>
+      
     </div>
   </div>
 </section>
@@ -376,7 +355,7 @@
             <h6><strong>Mail:</strong> julietasosa548@gmail.com </h6>
           </li>
           <li><i class="fa fa-whatsapp"></i>
-            <h6><strong>Teléfono:</strong><a href="https://wa.me/542617232067"> 2617232067</a> </h6>
+            <h6><strong>Teléfono:</strong><a href="https://wa.me/542617232067" target="_blank"> 2617232067</a> </h6>
           </li>
           
         </ul>
@@ -394,8 +373,8 @@
 </footer>
 <footer id="footer-down">
   <ul class="social-icon">
-    <li class="linkedin hvr-pulse"><a href="https://linkedin.com/in/julietasosa548"><i class="fa fa-linkedin"></i></a></li>
-    <li class="behance hvr-pulse"><a href="https://github.com/julieta548"><i class="fa fa-github"></i></a></li>
+    <li class="linkedin hvr-pulse"><a href="https://linkedin.com/in/julietasosa548" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+    <li class="behance hvr-pulse"><a href="https://github.com/julieta548" target="_blank"><i class="fa fa-github"></i></a></li>
   </ul>
   <p> &copy; Copyright 2016 Cosmix - Created By : <a href="http://templatestock.co" target="_blank">Template Stock</a> </p>
 </footer>
